UI Controller - standard module pattern

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pattern project</title>
 </head>
 <body>
-
+<h1>Module pattern</h1>
 <!-- Compiled and minified Javascript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="app.js"></script>
