--- a/index.html
+++ b/index.html
@@ -5,10 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Pattern project</title>
+    <title>Calory project</title>
 </head>
 <body>
-<h1>Module pattern</h1>
+<!-- NavBar -->
+<nav>
+    <div class="nav-wrapper-blue">
+        <div class="container">
+            <a href="#" class="brand-logo-center">Track calories</a>
+        </div>
+    </div>
+</nav>
+
+<br>
+
+<div class="container">
+    <!-- form card -->
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">Add Meal / Food Item</span>
+            <form class="col">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input type="text" placeholder="Add Item" id="item-name">
+                        <label for="item-name">Meal</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input type="text" placeholder="Add Calories" id="item-calories">
+                        <label for="item-calories">Calories</label>
+                    </div>
+                    <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i> Add Meal </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Calorie count -->
+<h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
+
 <!-- Compiled and minified Javascript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="app.js"></script>
