--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://kit.fontawesome.com/277d889efd.js" crossorigin="anonymous"></script>
     <title>Calory project</title>
 </head>
 <body>
@@ -39,10 +40,15 @@
             </form>
         </div>
     </div>
-</div>
+
 
 <!-- Calorie count -->
 <h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
+
+<!-- Item List -->
+<ul id="item-list" class="collection"></ul>
+
+</div>
 
 <!-- Compiled and minified Javascript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
